# my-mpc-communication

./: .gitignore  Cargo.toml  Dockerfile
src/: error.rs  main.rs
src/communication_client/: communication_client.rs  communication_params.rs  mod.rs
src/config/env/: env.rs
