[package]
name = "mpc-communication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# CANIN ULTRA SUPER LIBLERI
mpc-rocket = { git = "https://github.com/can-arikan/my-rust-rocket.git" }
mpc-vault = { git = "https://github.com/can-arikan/my-mpc-vault.git" }
mpc-utils = { git = "https://github.com/can-arikan/my-rust-util.git" }

tokio = { version = "1.28.2", features = ["full"] }
log = "0.4"
env_logger = "0.10.0"
serde = "1.0.164"
serde_json = "1.0.96"
dotenv = "0.15.0"
uuid = { version = "1.3.4", features = ["v4"] }

[dependencies.rocket]
version = "=0.5.0-rc.3"
features = ["json"]